--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.3.0",
     "antd": "^6.0.0",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
