--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^11.2.3",
     "@prisma/client": "^6.19.0",
     "@types/nodemailer": "^7.0.4",
+    "axios": "^1.13.3",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
