--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed-comprehensive.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
